<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Everyday</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="setting">设置</string>
    <string name="username">登录名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="upload">上传</string>
    <string name="loading_please_wait">正在加载，请稍候…</string>
    <string name="uploading_please_wait">正在上传，请稍候…</string>
    <string name="title_activity_show_image">详情</string>


    <string name="upload_fail">上传失败</string>
    <string name="upload_success">上传成功</string>
    <string name="con_fail">连接失败</string>
    <string name="insert_sdcard">请插入SD卡</string>
    <string name="file_not_exist">文件不存在.</string>
    
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    
    <string name="time_to_photograph">拍照啦~</string>
</resources>