<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_prev_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/sets_date_prev_month_selector" />

        <Button
            android:id="@+id/btn_curr_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_medium" />

        <Button
            android:id="@+id/btn_next_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/sets_date_next_month_selector" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/date_picker_head"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sunday"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/monday"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tuesday"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/wednesday"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tuesday"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/friday"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/saturday"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/date_picker_back">

        <!-- 第一行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/date_cell_0"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_1"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_2"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_3"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_4"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_5"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_6"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />
        </TableRow>

        <!-- 第二行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/date_cell_7"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_8"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_9"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_10"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_11"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_12"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_13"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />
        </TableRow>

        <!-- 第三行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/date_cell_14"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_15"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_16"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_17"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_18"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_19"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_20"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />
        </TableRow>

        <!-- 第四行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/date_cell_21"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_22"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_23"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_24"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_25"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_26"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_27"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />
        </TableRow>

        <!-- 第五行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/date_cell_28"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_29"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_30"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_31"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_32"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_33"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_34"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />
        </TableRow>

        <!-- 第六行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/date_cell_35"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_36"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_37"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_38"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_39"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_40"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

            <Button
                android:id="@+id/date_cell_41"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="#000000" />

        </TableRow>
    </TableLayout>

</LinearLayout>